cmake_minimum_required(VERSION 3.15)
project(prthg-lib)


# ########################################################################
if (CMAKE_BUILD_TYPE STREQUAL "")
    set(CMAKE_BUILD_TYPE "Debug")
endif()
# ########################################################################


# ########################################################################
add_subdirectory(prthgcpp)
# ########################################################################